# flex-record

./: .gitignore  AGENTS.md  README.md  flake.nix  flex-record.cabal  project.cabal  runagent.sh
src/: FlexRecord.hs
src/Data/: FlexRecord.hs
src/Data/FlexRecord/: Json.hs
src/FlexRecord/: Json.hs
test/: Spec.hs
