cabal-version:      3.0
name:               flex-record
version:            0.1.0.0
build-type:         Simple
license:            ISC

library
  hs-source-dirs:     src
  exposed-modules:    FlexRecord
  build-depends:      base >= 4.14 && < 5
  default-language:   GHC2024


test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base >= 4.14 && < 5
                    , flex-record
                    , HUnit
  default-language:   GHC2024
